修改封装请求库

--- a/package.json
+++ b/package.json
@@ -1,12 +1,14 @@
 {
   "name": "cherry-admin",
-  "version": "1.0.0",
+  "version": "2.0.0",
   "private": true,
   "scripts": {
     "download": "yarn install",
     "serve": "vue-cli-service serve",
     "build": "vue-cli-service build",
-    "lint": "vue-cli-service lint"
+    "lint": "vue-cli-service lint",
+    "publish:test": "scp -r ./dist/* root@192.168.1.207:/data/web/cherry-admin",
+    "publish:prod": "scp -r ./dist/* web@139.224.196.199:/data/web/cherry-admin"
   },
   "dependencies": {
     "ant-design-vue": "^1.7.5",
