--- a/.env.development
+++ b/.env.development
@@ -1,7 +1,7 @@
 ENV = 'development'
 
 # 接口地址
-VUE_APP_BASE_API  = 'http://192.168.1.207:9000/api/wishtree'
+VUE_APP_BASE_API  = 'http://192.168.1.208:8012/api/'
 # VUE_APP_WS_API = 'ws://localhost:8000'
 
 # 是否启用 babel-plugin-dynamic-import-node插件
